--- a/src/components/DrawerAppBar.css
+++ b/src/components/DrawerAppBar.css
@@ -92,3 +92,27 @@ html, body {
     display: none !important;
   }
 }
+
+
+
+/* DrawerAppBar.css */
+.nav-button:hover {
+  transform: scale(1.05);
+  color: #7681B3;
+}
+
+.contact-link {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  color: #3a1681;
+  margin-left: 16px;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.contact-link:hover {
+  color: #6715e3;
+}
