--- a/src/components/DrawerAppBar.css
+++ b/src/components/DrawerAppBar.css
@@ -72,10 +72,12 @@ html, body {
 /* Active nav link underline */
 .nav-button.active-link::after {
   content: '';
-  position: absolute;
- 
-  background-color: transparent;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
 }
+
 
 /* Hide top contact in mobile */
 @media (max-width: 600px) {
