--- a/src/components/DrawerAppBar.css
+++ b/src/components/DrawerAppBar.css
@@ -85,3 +85,19 @@ html, body {
     display: none !important;
   }
 }
+
+
+@keyframes slideInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.slide-in-left {
+  animation: slideInLeft 1s ease-out forwards;
+}
