--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -10,6 +10,8 @@
 .banner-section {
   padding: 40px 20px;
   text-align: center;
+    min-height: 80%; /* This ensures full screen height */
+
 }
 
 
